# shuati_platform

./: .gitignore  CMakeLists.txt  SPEC.md
config/: app.yaml
docker/cpp/: Dockerfile
docs/development/: api-curl-examples.md  dependencies.md  deployment-ip-port.md
docs/superpowers/plans/: 2026-07-02-p0-foundation.md  2026-07-02-p1-minimal-service.md  2026-07-02-p2-auth-database.md  2026-07-02-p3-p4-problems-judge.md  2026-07-02-p5-p6-p7-frontend-security-tests.md
docs/tech-logs/: 2026-07-02.md  README.md
include/shuati/app/: app_config.h  server.h
include/shuati/auth/: auth_service.h  password_hasher.h  role.h  session_manager.h  user_repository.h
include/shuati/common/: config.h  crypto.h  json_response.h  logging.h  rate_limiter.h
include/shuati/db/: connection_pool.h
include/shuati/judge/: judge_types.h  local_cpp_runner.h  submission_service.h
include/shuati/problem/: problem_service.h  testcase_service.h
public/: index.html
public/assets/: app.js  styles.css
scripts/: api_smoke_p7.py  bootstrap_local_gcc.sh  install_ubuntu_deps.sh  judge_docker_run_example.sh  smoke_p3p4.sh  web_smoke_p5.py
sql/: schema.sql
src/app/: app_config.cpp  main.cpp  server.cpp
src/auth/: auth_service.cpp  password_hasher.cpp  role.cpp  session_manager.cpp  user_repository.cpp
src/common/: config.cpp  crypto.cpp  json_response.cpp  logging.cpp  rate_limiter.cpp
src/judge/: judge_types.cpp  local_cpp_runner.cpp  submission_service.cpp
src/problem/: problem_service.cpp  testcase_service.cpp
tests/unit/: app_config_test.cpp  auth_service_test.cpp  config_test.cpp  connection_pool_test.cpp  json_response_test.cpp  local_cpp_runner_test.cpp  logging_test.cpp  password_hasher_test.cpp  problem_service_test.cpp  rate_limiter_test.cpp  role_test.cpp  server_test.cpp  session_manager_test.cpp  submission_service_test.cpp  testcase_service_test.cpp
